# readme-generator

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
meu_gerador_readme.egg-info/: SOURCES.txt
projeto-flisol/: analisador.py
src/: analisador.py  cli.py  gerador.py
